- Fixed bug #35409 (undefined reference to 'rl_completion_matches')